[gd_scene load_steps=5 format=3 uid="uid://eux26yax53op"]

[ext_resource type="Script" uid="uid://eqihhn8fa54d" path="res://Scenes/TB Fight/TB Fight UI/Scripts/tb_fight_move_list_item.gd" id="1_rs677"]
[ext_resource type="PackedScene" uid="uid://p076elcnrmrn" path="res://Scenes/TB Fight/TB Fight UI/tb_fight_move_icon.tscn" id="1_tx2jx"]
[ext_resource type="FontFile" uid="uid://c2h2ioj5qcxdf" path="res://Assets/Fonts/Bescii-Mono.ttf" id="3_rs677"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tx2jx"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="TBFightMoveListItem" type="Control"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_rs677")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_tx2jx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TBFightMoveIcon" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_tx2jx")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 1

[node name="MoveName" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_rs677")
theme_override_font_sizes/font_size = 8
text = "<move name>"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
